--- a/draft.tex
+++ b/draft.tex
@@ -107,7 +107,7 @@
 %Reduces verbosity about the underful vboxes.
 \vbadness=10000
 
-\title{Robust Winner Determination and Simultaneous Elicitation of Scoring Rule and Agents Preferences}
+\title{Simultaneous Elicitation of Scoring Rule and Agents Preferences for Robust Winner Determination}
 
 \begin{document}
 \maketitle
