--- a/draft.tex
+++ b/draft.tex
@@ -402,37 +402,26 @@ At this stage, we are satisfied that a procedure exists to transform our abstrac
 \paragraph{Elicitation strategies}
 We develop several elicitation strategies for simultaneous elicitation of agents' preferences and of the scoring rule.
 While it is of course possible to first fully elicit the agents’ preferences and afterwards elicit weights, we also want to propose interleaved approaches and compare them experimentally.
-Indeed, it can be beneficial to interleave questions asked to the chair and questions asked to agents, depending on which is estimated to be more informative.
+Indeed, it can be beneficial to split efforts asking questions to the chair and to agents, depending on which is estimated to be more informative.
+We define here the various strategies we tested experimentally. A strategy tells us, given the current partial knowledge $(\pprofile, W)$, which question should be asked next.
 
-We define here the various strategies we tested experimentally; a strategy %is a function (or a random process) that 
-gives us, given the current partial knowledge $(\pprofile, W)$, a question that should be asked. % according to that strategy. 
-Among them, the \strat{Random} strategy is used to capture how hard an elicitation problem is, by giving us a baseline. %: using it we can estimate how fast the regret diminishes when we ask questions randomly. 
-Choosing the questions purely randomly however, that is, independently of what we know already, would be pointless, as we would most of the time ask questions we already know the answer of. Thus, this strategy choses questions in a minimally “clever” way, just by picking questions in a set of a priori relevant questions. 
-The \strat{Random} strategy first decides with a probability of $1/2$ each whether it will ask a question about weights or a question about a preference ordering (unless the profile is already known entirely). If it opted for a question about weights, it draws one rank in $2 ≤ r ≤ m-2$ equiprobably, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$. If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; picks an alternative $a$ randomly with equal probability among those involved in some incomparabilities in $\ppref_j$; and picks an alternative $b$ with equal probability among those incomparable with $a$ in $\ppref_j$.
-
-We also define the \strat{Extreme completions} strategy, which we consider as a more realistic baseline. 
-Consider the solution of the minimax regret game, 
- $(x^{*},\bar{y},\bar{\profile},\bar{\w})$, where $x^{*}$ is the minimax regret optimal alternative, and $\bar{y} = \arg \max_{y \in A} \PMR(x,y; \pprofile, W)$, $\bar{\profile}$ and $\bar{\w}$ are the adversarial choices, thus, the instantiations that, given the choice of $x^*$, maximize the regret. 
-Define: 
-\begin{align}
-\tau_{1} & = \min_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w),  \label{eq:tau1} \\
-\tau_{2} & = \min_{\profile \in C(\pprofile)} s(\bar{y},\profile, \bar{\w}) -  s(x^{*}; \profile, \bar{\w}).
-\end{align}
-
-Intuitively the quantity $\MMR - \tau_{1} = \max_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w) - \min_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)$ estimates the contribution to regret of our uncertainty about the weights $\w$, while $\MMR - \tau_{2} $ estimates the uncertainty about the profile.
-Therefore, whenever ${\color{red} \lambda *} \tau_{1} < \tau_{2}$ we ask a question to the chair, and compare component-wise $\bar{\w}$ and $\w^{\tau}$, the argmax of Eq. (\ref{eq:tau1}), to find the position $r$ that is most valuable to ask about (the one that maximizes $\abs{\bar{\w}_r - \w^{\tau}_r}$), and choose $\lambda$ as the middle of the interval of possible values for that rank.
-Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agents. We select the question by checking for each agent $j$ the difference between the difference of the ranks of $x$ and $y$ in the profile that minimizes compared to the one that maximizes the difference of scores, and pick an agent related to the highest difference, then pick $x$ or $y$ with $1/2$ chances as the first alternative of the question, and pick an incomparable alternative equiprobably as the second one.
+The \strat{Random} strategy gives a baseline for comparison and informs about the difficulty of an elicitation problem. 
+This strategy first decides with a probability of $1/2$ each whether it will ask a question about weights or a question about a preference ordering (unless the profile is already known entirely). If it opted for a question about weights, it draws one rank in $2 ≤ r ≤ m-2$ equiprobably, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$. If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; picks an alternative $a$ randomly with equal probability among those involved in some incomparabilities in $\ppref_j$; and picks an alternative $b$ with equal probability among those incomparable with $a$ in $\ppref_j$.
 
 The \strat{Pessimistic} strategy selects the question that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer. Then the badness of the question in the worst case is:
 \[\max_{i=1,2} \MMR(\pprofile_i,W_i) \]
-This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. 
-%The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy (with the difference that a threshold is used: if for some rank $r$ the interval of possible values for $\lambda$ is not larger than $0.1$, the question is not considered). 
-It uses the $\leximax$ criterion %a variant of the $\max$ 
-as an aggregator: if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest of this value.
+This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. %We use the $\max$ operator because \citet{Cailloux2014} reported that pessimistic aggregation works much better than optimistic aggregation, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
+It uses the $\leximax$ criterion as an aggregator: if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest of this value.
  We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
 
-The \strat{Two phase} strategy asks a predefined, non adaptive sequence of $m-2$ questions in order to gather informations about the weights $\w$ of the scoring rule, using one question per rank (except the extreme ones) as defined in the other strategies, thus, each cutting the initial interval of possibilities into two equal parts. Then it only asks questions about the agents, using questions as defined in the \strat{Pessimistic} strategy.
-%TODO Then use minimax regret as in Lu and Boutilier. check what’s this.
+The \strat{Pessimistic with heuristic} strategy is a much faster version of the previous strategy. It chooses among the set of possible questions in the same way, but considers only one possible question per voter and one possible question about the weights, thereby reducing the complexity to $O(n^2 m^3)$. \commentOC{Is this right? If we can solve easily a size $(m, n) = (15, 15)$ with the Pwh strategy, which requires about $15^5 \approx 8 . 10^5$ operations, we should be able to solve easily a size $(m, n) = (6, 6)$ with the Pessimistic strategy, which requires about $6^7 \approx 3 . 10^5$ operations.}
+The possible question associated to each voter is determined using a heuristic proposed by \citet{Boutilier2006}. \commentOC{Please check that the reference is correct and explain briefly their heuristic.} The possible question to the committee is determined as follows. \commentOC{I am not so happy about this. If we have time, we should consider one question per rank and drop the tau business.}
+Recall that $x^{*}$ is the minimax regret optimal alternative, and $\bar{y} = \arg \max_{y \in A} \PMR(x,y; \pprofile, W)$, $\bar{\profile}$ and $\bar{\w}$ are the adversarial choices, thus, the instantiations that, given the choice of $x^*$, maximize the regret. 
+Define $w^\tau = \argmin_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)$.
+The vector $\bar{w} - w^\tau = \argmax_{\w \in W} (s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)) - \argmin_{\w \in W} (s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w))$ estimates our uncertainty about the weights $\w$ when fixing our choice of alternative $x^*$ and the adversarial choices $\bar{y}$ and $\bar{\profile}$.
+Therefore, we compare component-wise $\bar{\w}$ and $\w^{\tau}$, to find the position $r$ that is most valuable to ask about (the one that maximizes $\abs{\bar{\w}_r - \w^{\tau}_r}$), and choose $\lambda$ as the middle of the interval of possible values for that rank.
+
+Finally, the \strat{Two phase} strategy is developed in order to investigate the effect of varying the proportion of questions asked to voters and to the committee. The \strat{Two phase - vc} first asks $p$ questions to the voters, then $k-p$ questions to the committee, using in both cases Pessimistic with heuristic to select the specific question. The \strat{Two phase - cv} strategy starts with $p$ questions to the committee, then asks to the voters. \commentOC{If our XPs exhibit no significant change between vc and cv (or if we don’t have time to run them), I will drop this distinction.}
 
 %\item {\em Volumetric} strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
 
@@ -440,6 +429,96 @@ The \strat{Two phase} strategy asks a predefined, non adaptive sequence of $m-2$
 \label{sec:experiments}
 
 \sisetup{round-mode=places, round-precision=1, table-figures-integer=1, table-figures-decimal=1}
+\begin{table}
+	\begin{center}
+		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+			\toprule
+			{k} & {Rnd} & {sd} & {Pes.} & {sd} & {Pes.\ w.\ h.} & {sd} \\
+			\midrule
+			0 & 5.0 & 0 & 5.0 & 0\\
+			5 & 4.93 & 0.16 & 4.15 & 0.32\\
+			10 & 4.84 & 0.22 & 3.44 & 0.46\\
+			15 & 4.28 & 0.58 & 2.66 &0.54 \\
+			20 & 3.85 & 0.33 & 1.62 & 0.82\\
+			25 & 3.50 & 0.78 & 0.84 &  0.57\\
+			30 & 2.96 & 0.80 & 0.53 & 0.70\\
+			\bottomrule
+		\end{tabular}
+	\end{center}
+	\caption{Minimax regret in problems of size $(5, 5)$ after $k$ questions.}
+	\label{fig:55}
+\end{table}
+
+\begin{table}
+	\begin{center}
+		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+			\toprule
+			{k} & {Rnd} & {sd} & {Pes.\ w.\ h.} & {sd} \\
+			\midrule
+			0 & 6.0 & 0 &  &  \\
+			5 &  &  &  &  \\
+			10 &  &  &  &  \\
+			15 &  &  &  &  \\
+			20 &  &  &  &  \\
+			25 &  &  &  &  \\
+			30 &  &  &  &  \\
+			\bottomrule
+		\end{tabular}
+	\end{center}
+	\caption{Regret in problems of size $(10, 20)$ after $k$ questions.}
+	\label{fig:1020}
+\end{table}
+
+We test our strategies using randomly generated datasets. %TODO and real datasets. (sushi and iris).
+Our first goal is to see, with a small problem size ($m = 5, n = 5$) and the (time consuming) Pessimistic strategy, if an important lowering of the maximal regret can be achieved with a reasonable number of questions. We also want to estimate how “hard” such a problem is, by using the Random strategy as a baseline. Third, we want to estimate the loss (in terms of worst regret) when switching to the faster Pessimistic with heuristic strategy. Fourth, we want to see, on a bigger problem size ($m = 10, n = 20$), how many questions must be asked for that strategy to achieve a significant reduction of the worst regret. Finally, we want to evaluate, thanks to the Two phases strategy, the impact of varying the proportion of questions asked to the voters (with respect to questions asked to the committee) on the reduction of the worst regret.
+%We also want to see how realistic our approach is for various problem sizes, by estimating the number of questions we would have to ask before being able to reduce the worst regret significantly.
+
+We use the following protocol.
+Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy, we randomly generate an “oracle”, containing the true preferences of the agents (i.e. the linear orders) and the weights associated with the chair's scoring rule. We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the selected strategy, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained. Then we compute the resulting $\MMR$. We repeat this whole experiment 10 times, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation.
+
+The results are displayed in \cref{fig:55,fig:1020,fig:p}, where strategies are designated by Rnd for Random, 2 ph. for Two phases, Pes. for Pessimistic and Pes.\ w.\ h. for Pessimistic with heuristic.
+
+\begin{table}
+	\begin{center}
+		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+			\toprule
+			{p} & {Rnd} & {sd} & {2 ph.} & {sd} \\
+			\midrule
+			0 &  &  &  &  \\
+			20 &  &  &  &  \\
+			40 &  &  &  &  \\
+			60 &  &  &  &  \\
+			80 &  &  &  &  \\
+			100 &  &  &  &  \\
+			\bottomrule
+		\end{tabular}
+	\end{center}
+	\caption{Regret in problems of size $(10, 20)$ after $100$ questions.}
+	\label{fig:p}
+\end{table}
+
+\section{Conclusions}  
+\label{sec:conclusions}
+In this paper we have considered a social choice setting with partial information about the agent's preferences and a partially specified voting rule.
+In this setting, we have proposed the use of minimax regret both as a means of robust winner determination as well as a guide to the process of simultaneous elicitation of preferences and voting rule.
+Our experimental results %on randomly generated and real world data sets 
+suggest that regret-based elicitation is effective and allow to quickly reduce worst regret significantly.
+%Regret-based elicitation allows to determine near-optimal winners using only few information about the agents' preferences.
+
+%As part of the contribution of this work, we publish an open-source library that allows to reproduce our experiments and more, at https://github.com/…
+
+We mention some directions for future works.
+Further development of elicitation strategies, considering alternative heuristics, is an important direction. 
+Second, elicitation could be extended to voting rules beyond scoring rules.
+Finally, an important direction of extension aims at studying how to elicit preferences while restraining to concrete and easy questions.
+% Acknowledgements: We thank the reviewers for comments helping to improve the paper. 
+\bibliography{biblio}
+%\bibliographystyle{named}
+\bibliographystyle{abbrvnat} 
+%\end{document}
+
+\appendix
+\section{Old table}
 \begin{table}
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
@@ -457,80 +536,10 @@ The \strat{Two phase} strategy asks a predefined, non adaptive sequence of $m-2$
 		\end{tabular}
 	\end{center}
 	\caption{Minimax regret in problems of size $(4, 4)$ after $k$ questions.}
-	\label{fig:xp1}
+	\label{fig:44}
 \end{table}
+See \cref{fig:44}.
 
-\begin{table}
-	\begin{center}
-		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
-			\toprule
-			{k} & {Rnd} & {sd} & {T. ph.} & {sd} & {Pes.} & {sd} & {Pes.} & {sd} \\
-			\midrule
-			0 & 5.0 & 0 & 5.0 & 0 & 5.0 & 0\\
-			5 & 4.93 & 0.16 & 4.98 & 0.01 & 4.15 & 0.32\\
-			10 & 4.84 & 0.22 & 4.35 & 0.28 & 3.44 & 0.46\\
-			15 & 4.28 & 0.58 & 3.70 & 0.25 & 2.66 &0.54 \\
-			20 & 3.85 & 0.33 & 2.67 & 0.51 & 1.62 & 0.82\\
-			25 & 3.50 & 0.78 & 2.17 & 0.66 & 0.84 &  0.57\\
-			30 & 2.96 & 0.80 & 1.47 & 1.10 & 0.53 & 0.70\\
-			\bottomrule
-		\end{tabular}
-	\end{center}
-	\caption{Minimax regret in problems of size $(5, 5)$ after $k$ questions.}
-	\label{fig:xp2}
-\end{table}
-
-\begin{table}
-	\begin{center}
-		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
-			\toprule
-			{k} & {Rnd} & {sd} & {T. ph.} & {sd} & {Pes.} & {sd} & {Pes.} & {sd} \\
-			\midrule
-			0 & 6.0 &  &  &  &  & \\
-			5 &  &  &  &  &  & \\
-			10 &  &  &  &  &  & \\
-			15 &  &  &  &  &  & \\
-			20 &  &  &  &  &  & \\
-			25 &  &  &  &  &  &  \\
-			30 &  &  &  &  &  & \\
-			\bottomrule
-		\end{tabular}
-	\end{center}
-	\caption{Minimax regret in problems of size $(6, 6)$ after $k$ questions.}
-	\label{fig:xp3}
-\end{table}
-
-We test our strategies using randomly generated datasets. %TODO and real datasets. (sushi and iris).
-Our goal is to see how much we gain with an interleaved elicitation approach mixing questions to the chair and questions asked to the agents compared to performing a partial elicitation of the rule first and then eliciting the agents preferences. We also want to see how realistic our approach is for various problem sizes, by estimating the number of questions we would have to ask before being able to reduce the worst regret significantly.
-
-We use the following protocol.
-Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy, we randomly generate an “oracle”, containing the true preferences of the agents (i.e. the linear orders) and the weights associated with the chair's scoring rule. We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the selected strategy, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained. Then we compute the resulting $\MMR$. We repeat this whole experiment 10 times, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation.
-
-The results are displayed in \cref{fig:xp1,fig:xp2,fig:xp3}, where strategies are designated by Rnd for Random, T. ph. for Two phases, EC for Extreme completions, and Pes. for Pessimistic.
-
-\section{Conclusions}  
-\label{sec:conclusions}
-In this paper we have considered a social choice setting with partial information about the agent's preferences and a partially specified voting rule.
-In this setting, we have proposed the use of minimax regret both as a means of robust winner determination as well as a guide to the process of simultaneous elicitation of preferences and voting rule.
-Our experimental results %on randomly generated and real world data sets 
-suggest that regret-based elicitation is effective and allow to quickly reduce worst regret significantly.
-%Regret-based elicitation allows to determine near-optimal winners using only few information about the agents' preferences.
-
-%As part of the contribution of this work, we publish an open-source library that allows to reproduce our experiments and more, at https://github.com/…
-
-We mention some directions for future works.
-Further development of elicitation strategies, considering alternative heuristics, is an important direction. 
-Second, elicitation could be extended to voting rules beyond scoring rules.
-Finally, an important direction of extension aims at studying how to elicit preferences while restraining to concrete and easy questions.
-% Acknowledgements: We thank the reviewers for comments helping to improve the paper. 
-%{\small
-\bibliography{biblio}
-%\bibliographystyle{named}
-\bibliographystyle{abbrvnat} 
-%}
-%\end{document}
-
-\appendix
 \section{Bounding differences of weights}
 We want to check whether we can round PMR values to (for example) $10^{-4}$. Thus, we want to bound the difference of scores (unless it is zero).
 
